force-app/main/default/objects/Recipe__c/fields/Coctail_type__c.field-meta.xml
<CustomField>
    <fullName>Coctail_type__c</fullName>
    <label>Coctail type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sparkling</fullName>
            </value>
            <value>
                <fullName>Classic</fullName>
            </value>
            <value>
                <fullName>Creamy</fullName>
            </value>
            <value>
                <fullName>Frozen</fullName>
            </value>
            <value>
                <fullName>Hot</fullName>
            </value>
            <value>
                <fullName>Longdrink</fullName>
            </value>
            <value>
                <fullName>Martini</fullName>
            </value>
            <value>
                <fullName>Nonalcoholic</fullName>
            </value>
            <value>
                <fullName>Shooter</fullName>
            </value>
            <value>
                <fullName>Shot</fullName>
            </value>
            <value>
                <fullName>Smoothie</fullName>
            </value>
            <value>
                <fullName>Tropical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>