force-app/main/default/objects/Recipe__c/fields/Recipe_description__c.field-meta.xml
<CustomField>
    <fullName>Recipe_description__c</fullName>
    <label>Recipe description</label>
    <type>TextArea</type>
</CustomField>