force-app/main/default/objects/Recipe__c/fields/Recipe_number__c.field-meta.xml
<CustomField>
    <fullName>Recipe_number__c</fullName>
    <displayFormat>RCP-{0000}</displayFormat>
    <label>Recipe number</label>
    <type>AutoNumber</type>
</CustomField>