force-app/main/default/objects/Recipe__c/fields/Recipe_URL__c.field-meta.xml
<CustomField>
    <fullName>Recipe_URL__c</fullName>
    <label>Recipe URL</label>
    <type>Url</type>
</CustomField>